handle login email google

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RNBook</string>
+    <string name="server_client_id">1077497862556-3bi3rupqk8i882roflpg56fprdnfhg7n.apps.googleusercontent.com</string>
 </resources>
